whitespace fixes

--- a/src/ticTacToe/tic-tac-toe.css
+++ b/src/ticTacToe/tic-tac-toe.css
@@ -41,12 +41,14 @@ div[class^="ticTacToe--board-cell"] {
     width: 233px;
 }
 
-.ticTacToe--board-cell {
+.ticTacToe--board-cell--background {
+    background: url("./Markers/background.png");
     background-repeat: no-repeat;   
 }
 
-.ticTacToe--board-cell--empty {
-    background: url("./Markers/empty.png");
+.ticTacToe--board-cell--win {
+    background: url("./Markers/backgound.png");
+    background-repeat: no-repeat;   
 }
 
 .ticTacToe--board-cell--x {
